--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Кератиновое выпрямление, ботокс, нанопластика, холодное восстановление и другие уходы на премиальной косметике. Меня зовут Кристина  Вербицкая — основатель студии BOTOX_AVENUE.
+Наша команда состоит из лучших специалистов в сфере реконструкции волос, которые также являются технологами." />
+    <meta name="keywords" content="Кератиновое выпрямление, ботокс, нанопластика, холодное восстановление и другие уходы на премиальной косметике." />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Botox Avenue</title>
   </head>
