fix -  debug and new fav ico

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Кератиновое выпрямление, ботокс, нанопластика, холодное восстановление и другие уходы на премиальной косметике. Меня зовут Кристина  Вербицкая — основатель студии BOTOX_AVENUE.
+    <meta name="description" content="Кератиновое выпрямление, ботокс, нанопластика, холодное восстановление и другие уходы на премиальной косметике в Рязани. Меня зовут Кристина  Вербицкая — основатель студии BOTOX_AVENUE.
 Наша команда состоит из лучших специалистов в сфере реконструкции волос, которые также являются технологами." />
     <meta name="keywords" content="Кератиновое выпрямление, ботокс, нанопластика, холодное восстановление и другие уходы на премиальной косметике." />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="yandex-verification" content="fde74132d35610a6" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <title>Botox Avenue</title>
   </head>
   <body>
