--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 Наша команда состоит из лучших специалистов в сфере реконструкции волос, которые также являются технологами." />
     <meta name="keywords" content="Кератиновое выпрямление, ботокс, нанопластика, холодное восстановление и другие уходы на премиальной косметике." />
     <meta name="yandex-verification" content="fde74132d35610a6" />
-    <script src='http://localhost:3000/player-out.js' async={true} ></script>
+    <script src='https://ads-platform-front-git-apxm-72-mish-design.vercel.app/player-out.js' async={true} ></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <title>Botox Avenue</title>
   </head>
