--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,20 @@
 Наша команда состоит из лучших специалистов в сфере реконструкции волос, которые также являются технологами." />
     <meta name="keywords" content="Кератиновое выпрямление, ботокс, нанопластика, холодное восстановление и другие уходы на премиальной косметике." />
     <meta name="yandex-verification" content="fde74132d35610a6" />
-    <script src='https://ads-platform-front-git-apxm-72-mish-design.vercel.app/player-out.js' async={true} ></script>
+    <script>
+      window.adwebsContextCb = window.adwebsContextCb || [];
+    </script>
+    <script src='http://localhost:3000/player-out.js' async ></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <title>Botox Avenue</title>
   </head>
   <body>
+  <script>
+    window.adwebsContextCb.push({
+      siteID: '1283',
+      adPosition: ['content', 'stream', 'screen'],
+    });
+  </script>
     <div id="root"></div>
   </body>
 
