--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
   <body>
   <script>
     window.adwebsContextCb.push({
-      siteID: '1283',
-      adPosition: ['content', 'stream', 'screen'],
+      siteKey: "OOrJlhVpRS-ySIEHn5xynw",
+      adsTypes: ["OUT_STREAM_CORNER"],
     });
   </script>
     <div id="root"></div>
