--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script>
       window.adwebsContextCb = window.adwebsContextCb || [];
     </script>
-    <script src='http://localhost:3000/player-out.js' async ></script>
+    <script src='https://ads-platform-front-git-apxm-72-mish-design.vercel.app/player-out.js' async ></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <title>Botox Avenue</title>
   </head>
